--- a/web/stylesheets/app.css
+++ b/web/stylesheets/app.css
@@ -5639,5 +5639,10 @@ table.hover tr:nth-of-type(even):hover {
 .clearfix::after {
   clear: both; }
 
-body {
-  color: #F00; }
+.alignright {
+  float: right;
+  padding: 0 0 1rem 1rem; }
+
+.alignleft {
+  float: left;
+  padding: 0 1rem 1rem 0; }
