--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Version: 1.0
 License: MIT
 License URI: https://opensource.org/licenses/MIT
 Tags: foundation, sass, compass, gulp, bower, twig, composer, responsive
-Text Domain: sayenkodesign
+Text Domain: supertheme
 
 This style file is not used by the theme.
 Instead edit the sass files and compile them with gulp.
