--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -4,16 +4,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-        <title>{{ wp_get_the_title() }}</title>
+        <title>{{ SP.WordPress.title() }}</title>
     {% endblock %}
 
     {% block stylesheets %}
-        {{ wp_head() | raw }}
+        {{ SP.WordPress.header() }}
     {% endblock %}
-
-    {% include "recipes/google-analytics.html.twig" %}
 </head>
-<body {{ wp_body_class() | raw }}>
+<body {{ SP.WordPress.body_class()}}>
 {% block body %}
     {% block header %}
         {% include "layout/header.html.twig" %}
@@ -22,8 +20,8 @@
     {% block content %}
         <section class="content">
             <div class="row column">
-                <h1>{{ wp_get_the_title() }}</h1>
-                {{ wp_get_the_content() | raw }}
+                <h1>{{ SP.WordPress.title() }}</h1>
+                {{ SP.WordPress.content() }}
             </div>
         </section>
     {% endblock %}
@@ -34,7 +32,7 @@
 {% endblock %}
 
 {% block scripts %}
-    {{ wp_footer() | raw }}
+    {{ SP.WordPress.footer() }}
 {% endblock %}
 </body>
 </html>
