fix body classes clall

--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -11,7 +11,7 @@
         {{ SP.WordPress.header() }}
     {% endblock %}
 </head>
-<body {{ SP.WordPress.body_class()}}>
+<body {{ SP.WordPress.classes()}}>
 {% block body %}
     {% block header %}
         {% include "layout/header.html.twig" %}
