--- a/src/views/admin/dashicons.html.twig
+++ b/src/views/admin/dashicons.html.twig
@@ -6,4 +6,10 @@
         background-position: 10px center;
         background-repeat: no-repeat;
     }
+    .dashicons-twig {
+        background-image: url('{{ SP.WordPress.templateURI }}/src/web/images/twig.png');
+        background-size: 20px;
+        background-position: 10px center;
+        background-repeat: no-repeat;
+    }
 </style>
