--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -1,43 +1,55 @@
-<html {{ SP.WordPress.languageAttr() }} class="no-js">
+<html {{ site.language_attributes }} class="no-js">
 <head>
     {% block meta %}
-        <meta charset="{{ SP.WordPress.blogInfo("charset") }}">
-        <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1">
+        <meta charset="{{ site.charset }}">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-        {% if SP.ACF.get_field('favicon', 'option') %}
-            <link rel="icon" type="image/x-icon" href="{{ SP.ACF.get_field('favicon', 'option').url }}" />
-        {% elseif SP.ACF.get_field('mobile_logo', 'option') %}
-            <link rel="icon" type="image/x-icon" href="{{ SP.ACF.get_field('mobile_logo', 'option').url }}" />
+        <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1">
+        <meta name="description" content="{{ site.description }}">
+        <link rel="pingback" href="{{ site.pingback_url }}" />
+
+        {% if favicon %}
+            <link rel="icon" type="image/x-icon" href="{{ favicon.url }}" />
         {% endif %}
-        <title>{{ SP.WordPress.wp_title() }}</title>
+
+        {% block meta_title %}
+            <title>
+                {% if wp_title %}
+                    {{ wp_title }} - {{ site.name }}
+                {% else %}
+                    {{ site.name }}
+                {% endif %}
+            </title>
+        {% endblock %}
     {% endblock %}
 
     {% block stylesheets %}
-        {{ SP.WordPress.header() }}
+        {{ function('wp_head') }}
     {% endblock %}
 </head>
-<body {{ SP.WordPress.classes()}}>
+<body {{ body_class }}>
+
 {% block body %}
     {% block header %}
-        {% include "layout/header.html.twig" %}
     {% endblock %}
 
     {% block content %}
-        <section class="content">
+        <main class="content">
             <div class="row column">
-                <h1>{{ SP.WordPress.title() }}</h1>
-                {{ SP.WordPress.content() }}
+                <article>
+                    <h1>{{ post.title }}</h1>
+                    {{ post.content }}
+                </article>
             </div>
-        </section>
+        </main>
     {% endblock %}
 
     {% block footer %}
-        {% include "layout/footer.html.twig" %}
     {% endblock %}
 {% endblock %}
 
 {% block scripts %}
-    {{ SP.WordPress.footer() }}
+    {{ function('wp_footer') }}
 {% endblock %}
 </body>
 </html>
