enable flexbox mode

--- a/web/scss/app.scss
+++ b/web/scss/app.scss
@@ -1,5 +1,5 @@
 @import "settings";
 @import "font-awesome";
 @import "foundation";
-@include foundation-everything();
+@include foundation-everything(true);
 @import "supertheme";
