--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: Sayenko Design Base Theme
 Theme URI: http://sayenkodesign.com
-Author: Robert M. Pakrer <robert@sayenkodesign.com>
+Author: Sayenko Design
 Author URI: http://sayenkodesign.com
-Description: Base theme built with foundation and twig. Easily compile and minify your assets with simple gulp commands.
+Description: Starter theme built with modern tools and technologies. Featuring Symfony's Dependany Injection Container, YAML config files, Timber templates, Foundation, Gulp and more.
 Version: 1.0
 License: MIT
 License URI: https://opensource.org/licenses/MIT
-Tags: foundation, sass, compass, gulp, bower, twig, composer, responsive
+Tags: timber, foundation, sass, compass, gulp, bower, twig, composer, symfony, responsive
 Text Domain: supertheme
 
 This style file is not used by the theme.
