--- a/src/views/page.html.twig
+++ b/src/views/page.html.twig
@@ -3,9 +3,13 @@
 {% block body %}
     <div class="row column">
         <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
-            <h1>{{post.title}}</h1>
             <div>
                 {{post.content}}
+            </div>
+
+            <div class="share">
+                <h4>Share</h4>
+                {% include 'panels/sharethis.html.twig' %}
             </div>
         </article>
     </div>
