add default blog style and scroll to top link

--- a/src/views/base.html.twig
+++ b/src/views/base.html.twig
@@ -94,6 +94,10 @@
         </main>
     {% endblock %}
 
+    {% block scroll %}
+        <a class="scroll-top"><i class="fa fa-angle-up"></i></a>
+    {% endblock %}
+
     {% block footer %}
     <div class="row column">Copyright {{"now"|date('Y')}}</div>
     {% endblock %}
