--- a/web/scss/_settings.scss
+++ b/web/scss/_settings.scss
@@ -39,6 +39,7 @@
 //  34. Title Bar
 //  35. Tooltip
 //  36. Top Bar
+//  37. Supertheme
 
 @import 'util/util';
 
@@ -565,3 +566,7 @@ $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 1rem;
 $topbar-input-width: 200px;
 $topbar-unstack-breakpoint: medium;
+
+// 37. Supertheme
+// -----------
+$two-column-background: #e6e6e6;
