--- a/web/scss/_settings.scss
+++ b/web/scss/_settings.scss
@@ -624,3 +624,6 @@ $topbar-unstack-breakpoint: medium;
 // 38. Supertheme
 // -----------
 $two-column-background: $light-gray;
+$desktop-menu-background: $white;
+$mobile-menu-bar-background: $white;
+$mobile-menu-background: $white;
