--- a/src/web/scss/supertheme.scss
+++ b/src/web/scss/supertheme.scss
@@ -1,3 +1,17 @@
+// sticky-container
+.sticky-container {
+  z-index: 10;
+  .large-menu {
+    background-color: $desktop-menu-background;
+  }
+  .mobile-menu-bar {
+    background-color: $mobile-menu-bar-background;
+  }
+  .mobile-menu {
+    background-color: $mobile-menu-background;
+  }
+}
+
 // wordpress image allignment
 .alignright {
   float: right;
