--- a/src/views/panels/sharethis.html.twig
+++ b/src/views/panels/sharethis.html.twig
@@ -1,8 +1,11 @@
+{% if sharethis %}
+{% if title is not defined or title%}<h4>Share</h4>{% endif %}
 <nav class="sharethis">
-    <span class='st_sharethis_large' displayText='ShareThis'></span>
-    <span class='st_facebook_large' displayText='Facebook'></span>
-    <span class='st_twitter_large' displayText='Tweet'></span>
-    <span class='st_linkedin_large' displayText='LinkedIn'></span>
-    <span class='st_pinterest_large' displayText='Pinterest'></span>
-    <span class='st_email_large' displayText='Email'></span>
+    <span class='st_sharethis_custom' displayText='ShareThis'></span>
+    <span class='st_facebook_custom' displayText='Facebook'></span>
+    <span class='st_twitter_custom' displayText='Tweet'></span>
+    <span class='st_linkedin_custom' displayText='LinkedIn'></span>
+    <span class='st_pinterest_custom' displayText='Pinterest'></span>
+    <span class='st_email_custom' displayText='Email'></span>
 </nav>
+{% endif %}
