--- a/web/scss/_settings.scss
+++ b/web/scss/_settings.scss
@@ -96,8 +96,8 @@ $breakpoint-classes: (small medium large);
 $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: (
-  small: 20px,
-  medium: 30px,
+  small: 1rem,
+  medium: 2rem,
 );
 $grid-column-align-edge: true;
 $block-grid-max: 8;
