--- a/web/scss/app.scss
+++ b/web/scss/app.scss
@@ -2,5 +2,4 @@
 @import "font-awesome";
 @import "foundation";
 @include foundation-everything(true);
-@import "supertheme";
-
+@import "supertheme/supertheme";
